# age_detection_api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.fastapi  Dockerfile.streamlit  Makefile  Pipfile  README.md  app.py  docker-compose.yaml  docker-compose.yml  entrypoint.sh  heroku.yml  pyproject.toml  pytest.ini  render.yml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-ci.yml  docker.yml
api/: Dockerfile  main.py  requirements.txt
app/: Dockerfile  main.py  model.py
data/: age_detection.csv  data_loader.py
notebooks/: eda.ipynb
tests/: test_predict.py
ui/: Dockerfile  app.py  streamlit_app.py
