[tool.poetry]
name = "age-detection-api"
version = "0.1.0"
description = "API to detect age from photos"
authors = ["Sahi Mohamed Francis Gonsangbeu <mohamedfrancissahi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-multipart = "^0.0.9"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
torch = "^2.3.1"
transformers = "^4.42.3"
streamlit = "^1.36.0"
requests = "^2.32.3"
httpx = "^0.27.0"
uvicorn = "^0.30.1"
pillow = "^10.4.0"
pytest = "^8.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pre-commit = "^3.7.1"
pdoc = "^14.5.1"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
